# cookiecutter-pgarrett

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  justfile  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_module}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_basic.py
